# Vortex

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
Example/: Application.cpp
Scripts/: Run.py
Vortex/: CMakeLists.txt
Vortex/include/: Vortex.h  VortexPCH.h
Vortex/include/Platform/OpenGL/: OpenGLRendererAPI.h
Vortex/include/Vortex/: Application.h  Core.h  EntryPoint.h  Layer.h  Logging.h  Time.h  Utils.h  Window.h
Vortex/include/Vortex/DebugUI/: DebugUILayer.h
Vortex/include/Vortex/Events/: ApplicationEvent.h  Event.h  KeyboardEvent.h  MouseEvent.h
Vortex/include/Vortex/Input/: Input.h  Keycodes.h
Vortex/include/Vortex/Renderer/: RenderCommand.h  RendererAPI.h
Vortex/src/Platform/OpenGL/: OpenGLRendererAPI.cpp
Vortex/src/Vortex/: Application.cpp  Core.cpp  Layer.cpp  Logging.cpp  Utils.cpp  Window.cpp
Vortex/src/Vortex/DebugUI/: DebugUILayer.cpp
Vortex/src/Vortex/Input/: Input.cpp
Vortex/src/Vortex/Renderer/: RenderCommand.cpp  RendererAPI.cpp
